--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,102 @@
-.card {
-  background: white;
-  border-radius: 15px;
-  width: 410px;
-  height: 450px;
-}
-.card-header {
-  background-image: url(../images/bg-pattern-card.svg);
-  /* background-size: 100px 100px; */
-  object-fit: cover;
-  height: 165px;
-  border-radius: 15px 15px 0px 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.item {
+  padding: 50px 50px 50px 48px;
   position: relative;
 }
-.profile {
-  width: 110px;
-  position: absolute;
-  bottom: -60px;
-  border-radius: 50%;
-  border: white 5px solid;
+
+.item-1 {
+  background-color: var(--bright-orange);
 }
-.card-body {
-  padding: 70px 50px 0px 50px;
-  height: 100px;
-  max-height: 140px;
-  font-size: 20px;
+.item-2 {
+  background-color: var(--dark-cyan);
+}
+.item-3 {
+  background-color: var(--very-dark-cyan);
 }
 
 h1 {
-  font-size: 20px !important;
+  text-transform: uppercase;
+  font-size: 40px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  color: var(--very-light-gray);
+  font-family: "Big Shoulders Display", cursive;
 }
-.age {
-  margin-left: 10px;
+
+.info {
+  line-height: 25px;
   font-weight: 400;
+  font-size: 15px;
+  color: var(--transparent-white);
 }
-
-.card-footer {
-  display: flex;
-  border-top: 1px solid var(--dark-grayish-blue);
-  justify-self: center;
-  height: 85px;
-  padding: 20px 20px;
-}
-.footer-grid {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 120px 120px 120px;
-}
-
-.number {
+.btn {
+  position: absolute;
+  background-color: var(--very-light-gray);
+  bottom: 50px;
+  border-radius: 30px;
+  padding: 15px 30px;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 15px;
+  border: 1px solid var(--very-light-gray);
 }
 
-@media (min-width: 320px) and (max-width: 460px) {
+.primary {
+  color: var(--bright-orange);
+}
+.secondary {
+  color: var(--dark-cyan);
+}
+.third {
+  color: var(--very-dark-cyan);
+}
+
+.primary:hover,
+.secondary:hover,
+.third:hover {
+  background-color: rgba(255, 0, 0, 0);
+  color: white;
+  cursor: pointer;
+}
+
+@media (min-width: 920px) {
+  .card {
+    border-radius: 15px;
+    width: 920px;
+    height: 500px;
+  }
+  .item-1 {
+    background-color: var(--bright-orange);
+    border-radius: 15px 0px 0px 15px;
+  }
+  .item-3 {
+    background-color: var(--very-dark-cyan);
+    border-radius: 0px 15px 15px 0px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 919px) {
   .card {
     width: 350px;
   }
+  .item {
+    padding: 40px 55px;
+  }
 
-  .footer-grid {
-    grid-template-columns: 105px 105px 105px;
+  .item-1 {
+    border-radius: 15px 15px 0px 0px;
+  }
+
+  .item-3 {
+    border-radius: 0px 0px 15px 15px;
+  }
+
+  h1 {
+    font-size: 40px;
+    color: var(--very-light-gray);
+    font-family: "Big Shoulders Display", cursive;
+  }
+  .btn {
+    position: initial;
+    margin-top: 2em;
+    margin-bottom: 1em;
   }
 }
